# OOP-Cplusplus-Project-300Level-NUN-2026

./: .gitignore  BookingSystem.cpp  BookingSystem.h  CMakeLists.txt  CODE_STRUCTURE.md  Flight.cpp  Flight.h  GUI.cpp  MainWindow.cpp  MainWindow.h  README PROJECT.txt  README.md  README.md.txt  README.txt.txt  TaskManager.cpp  Taskstorage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sudoku.cpp  sudoku.h
20231660 C++ Project/MyDairyApp/: CMakeLists.txt  README.txt
20231660 C++ Project/MyDairyApp/include/: DiaryApp.h
20231660 C++ Project/MyDairyApp/src/: DiaryApp.cpp  main.cpp
20232037_20230079_252030060/: compile command.txt  sudoku.cpp
20232119_20230660_20230056/: README.md
Assignment 1/SupermarketInventory/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Assignment 1/SupermarketInventory/include/: appdata.h  loginwindow.h  mainwindow.h  signupwindow.h  userstore.h
Assignment 1/SupermarketInventory/src/: appdata.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  signupwindow.cpp  userstore.cpp
Assignment 1/SupermarketInventory/ui/: loginwindow.ui  mainwindow.ui  signupwindow.ui
Assignment 1/data/: products.txt  sales.txt  users.txt
Assignment 1/lib/imgui/: imconfig.h
Assignment 1/lib/imgui/backends/: imgui_impl_win32.cpp
Assignment 1/src/: main.cpp
CHESSGAMEFINAL/: CMakeLists.txt  chessboard.cpp  chessboard.h  chessgame.pro  chesspiece.cpp  chesspiece.h  mainwindow.cpp  mainwindow.h
ColorChatApp/: .gitignore  CMakeLists.txt  README.md  RunDemo.command  build_all.sh  run_client.sh  run_demo.sh  run_server.sh
ColorChatApp/Codes/Client/: chatclient.cpp  chatclient.h  chatmessage.cpp  chatmessage.h  userprofile.cpp  userprofile.h
ColorChatApp/Codes/Server/: ChatServer.cpp  ChatServer.h  chatroom.h  main.cpp  message.h  user.h
ColorChatApp/gui/: bubblewidget.cpp  bubblewidget.h  connectdialog.cpp  connectdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mentiontextedit.cpp  mentiontextedit.h  thememanager.cpp  thememanager.h
Fadil Bello 20231936/Pulse Chat Server/PulseChatServer/: CMakeLists.txt  main.cpp  mainwindow.h
Fadil Bello 20231936/PulseChat/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  signupwindow.cpp  signupwindow.h  signupwindow.ui
HalimahRufai.20231605/ChatApp.2/ChatGUI/: CMakeLists.txt  Main.qml  main.cpp  messagemodel.cpp  messagemodel.h
HalimahRufai.20231605/ChatApp.2/ChatServer/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp
Minesweeper_Project_Submission/: Cell.h  MineSweeperGame.cpp  MineSweeperGame.h  README.md  main.cpp
OOP-Sudoku-Project/: GameManager.cpp  GameManager.h  Readme.md  SudokuBoard.cpp  SudokuBoard.h  main.cpp  sudoku_save.txt
PDP/: DiaryEntry.h  DiaryManager.cpp  DiaryManager.h  README.md  diary_data.txt  imgui.ini  main_gui.cpp
Project 1/: CMakeLists.txt  DiaryApp.cpp  DiaryApp.h  DiaryEntry.cpp  DiaryEntry.h  DiaryStorage.cpp  DiaryStorage.h  PasswordManager.cpp  PasswordManager.h  README.txt  main  main.cpp
Project 1/.qtcreator/: CMakeLists.txt.user.65b9812
Team_20230026_20231862_20231966/: CMakeLists.txt  README.md
Team_20230026_20231862_20231966/include/App/: Controller.h  GridView.h  MainWindow.h
Team_20230026_20231862_20231966/include/Sudoku/: Board.h  Cell.h  Solver.h
Team_20230026_20231862_20231966/src/: Board.cpp  CMakeLists.txt  Controller.cpp  GridView.cpp  MainWindow.cpp  Solver.cpp  main.cpp
Team_20230502_20230740_20230886/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Team_20230502_20230740_20230886/build_debug/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ToDoApp.slnx  ToDoApp.vcxproj  ToDoApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Team_20230502_20230740_20230886/build_debug/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
Team_20230502_20230740_20230886/build_debug/ToDoApp.dir/Debug/: ToDoApp.exe.recipe  ToDoApp.ilk
Team_20230502_20230740_20230886/build_debug/ToDoApp.dir/Debug/ToDoApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+9 more)
Team_20230502_20230740_20230886/build_debug/ToDoApp.dir/Release/: ToDoApp.exe.recipe
Team_20230502_20230740_20230886/build_debug/ToDoApp_autogen/include_Release/: ui_mainwindow.h
Team_20231728_20230101_20231672/: ChessGame.pro  Readme.txt
Team_20231728_20230101_20231672/images/: chess_resources.qrc
Team_20231728_20230101_20231672/portable_build/.moc/: moc_chesswidget.cpp  moc_homescreen.cpp  moc_mainwindow.cpp  moc_pausedialog.cpp
Team_20231728_20230101_20231672/portable_build/.obj/: object_script.ChessGame.Release
Team_20231728_20230101_20231672/portable_build/.rcc/: qrc_chess_resources.cpp
Team_20231728_20230101_20231672/portable_build/.ui/: ui_homescreen.h  ui_mainwindow.h  ui_pausedialog.h
Team_20231728_20230101_20231672/src/: Bishop.cpp  Bishop.h  ChessBoard.cpp  ChessBoard.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h  chesswidget.cpp  chesswidget.h  homescreen.cpp  homescreen.h  main.cpp  mainwindow.cpp  mainwindow.h  pausedialog.cpp  pausedialog.h
Team_20231728_20230101_20231672/ui/: homescreen.ui  pausedialog.ui
data/: bookings.txt  flights.txt  hotels.txt  users.txt
ibrahim-femi-todolistmanager/: CMakeLists.txt  README.md  main.cpp  main.h
include/: Bookable.h  Booking.h  BookingSystem.h  Flight.h  FlightBooking.h  Hotel.h  HotelBooking.h  Menu.h  User.h
include/gui/: FlightSearchPanel.h  HotelSearchPanel.h  MainWindow.h  Styles.h
qtchatapplication-master/: README.md
qtchatapplication-master/Client/: mainwindow.cpp
src/: Bookable.cpp  Booking.cpp  BookingSystem.cpp  Flight.cpp  FlightBooking.cpp  Hotel.cpp  HotelBooking.cpp  Menu.cpp  User.cpp  main.cpp
src/gui/: MainWindow.cpp  gui_main.cpp
(+23 files in other folders)
